// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`create a bucket 1`] = `
Object {
  "app.wsim/simulator.json": Object {
    "resources": Array [
      Object {
        "attrs": Object {},
        "path": "root/WingLogger",
        "props": Object {},
        "type": "wingsdk.cloud.Logger",
      },
      Object {
        "attrs": Object {},
        "path": "root/my_bucket",
        "props": Object {
          "public": false,
        },
        "type": "wingsdk.cloud.Bucket",
      },
    ],
    "sdkVersion": "0.0.0",
  },
  "tree.json": Object {
    "tree": Object {
      "children": Object {
        "WingLogger": Object {
          "attributes": Object {
            "wing:resource:connections": Array [],
            "wing:resource:stateful": true,
          },
          "constructInfo": Object {
            "fqn": "constructs.Construct",
            "version": "10.0.130",
          },
          "display": Object {
            "description": "A cloud logging facility",
            "hidden": true,
            "title": "Logger",
          },
          "id": "WingLogger",
          "path": "root/WingLogger",
        },
        "my_bucket": Object {
          "attributes": Object {
            "wing:resource:connections": Array [],
            "wing:resource:stateful": true,
          },
          "constructInfo": Object {
            "fqn": "constructs.Construct",
            "version": "10.0.130",
          },
          "display": Object {
            "description": "Represents a cloud object store",
            "title": "Bucket",
          },
          "id": "my_bucket",
          "path": "root/my_bucket",
        },
      },
      "constructInfo": Object {
        "fqn": "constructs.Construct",
        "version": "10.0.130",
      },
      "id": "root",
      "path": "root",
    },
    "version": "tree-0.1",
  },
}
`;

exports[`get invalid object throws an error 1`] = `
Array [
  "wingsdk.cloud.Logger created.",
  "wingsdk.cloud.Bucket created.",
  "Get (key=unknown.txt).",
  "wingsdk.cloud.Bucket deleted.",
  "wingsdk.cloud.Logger deleted.",
]
`;

exports[`get invalid object throws an error 2`] = `
Object {
  "app.wsim/simulator.json": Object {
    "resources": Array [
      Object {
        "attrs": Object {},
        "path": "root/WingLogger",
        "props": Object {},
        "type": "wingsdk.cloud.Logger",
      },
      Object {
        "attrs": Object {},
        "path": "root/my_bucket",
        "props": Object {
          "public": false,
        },
        "type": "wingsdk.cloud.Bucket",
      },
    ],
    "sdkVersion": "0.0.0",
  },
  "tree.json": Object {
    "tree": Object {
      "children": Object {
        "WingLogger": Object {
          "attributes": Object {
            "wing:resource:connections": Array [],
            "wing:resource:stateful": true,
          },
          "constructInfo": Object {
            "fqn": "constructs.Construct",
            "version": "10.0.130",
          },
          "display": Object {
            "description": "A cloud logging facility",
            "hidden": true,
            "title": "Logger",
          },
          "id": "WingLogger",
          "path": "root/WingLogger",
        },
        "my_bucket": Object {
          "attributes": Object {
            "wing:resource:connections": Array [],
            "wing:resource:stateful": true,
          },
          "constructInfo": Object {
            "fqn": "constructs.Construct",
            "version": "10.0.130",
          },
          "display": Object {
            "description": "Represents a cloud object store",
            "title": "Bucket",
          },
          "id": "my_bucket",
          "path": "root/my_bucket",
        },
      },
      "constructInfo": Object {
        "fqn": "constructs.Construct",
        "version": "10.0.130",
      },
      "id": "root",
      "path": "root",
    },
    "version": "tree-0.1",
  },
}
`;

exports[`put and get objects from bucket 1`] = `
Array [
  "wingsdk.cloud.Logger created.",
  "wingsdk.cloud.Bucket created.",
  "Put (key=greeting.txt).",
  "Get (key=greeting.txt).",
  "wingsdk.cloud.Bucket deleted.",
  "wingsdk.cloud.Logger deleted.",
]
`;

exports[`put and get objects from bucket 2`] = `
Object {
  "app.wsim/simulator.json": Object {
    "resources": Array [
      Object {
        "attrs": Object {},
        "path": "root/WingLogger",
        "props": Object {},
        "type": "wingsdk.cloud.Logger",
      },
      Object {
        "attrs": Object {},
        "path": "root/my_bucket",
        "props": Object {
          "public": false,
        },
        "type": "wingsdk.cloud.Bucket",
      },
    ],
    "sdkVersion": "0.0.0",
  },
  "tree.json": Object {
    "tree": Object {
      "children": Object {
        "WingLogger": Object {
          "attributes": Object {
            "wing:resource:connections": Array [],
            "wing:resource:stateful": true,
          },
          "constructInfo": Object {
            "fqn": "constructs.Construct",
            "version": "10.0.130",
          },
          "display": Object {
            "description": "A cloud logging facility",
            "hidden": true,
            "title": "Logger",
          },
          "id": "WingLogger",
          "path": "root/WingLogger",
        },
        "my_bucket": Object {
          "attributes": Object {
            "wing:resource:connections": Array [],
            "wing:resource:stateful": true,
          },
          "constructInfo": Object {
            "fqn": "constructs.Construct",
            "version": "10.0.130",
          },
          "display": Object {
            "description": "Represents a cloud object store",
            "title": "Bucket",
          },
          "id": "my_bucket",
          "path": "root/my_bucket",
        },
      },
      "constructInfo": Object {
        "fqn": "constructs.Construct",
        "version": "10.0.130",
      },
      "id": "root",
      "path": "root",
    },
    "version": "tree-0.1",
  },
}
`;

exports[`put multiple objects and list all from bucket 1`] = `
Array [
  "wingsdk.cloud.Logger created.",
  "wingsdk.cloud.Bucket created.",
  "Put (key=greeting1.txt).",
  "Put (key=greeting2.txt).",
  "Put (key=greeting3.txt).",
  "List (prefix=null).",
  "wingsdk.cloud.Bucket deleted.",
  "wingsdk.cloud.Logger deleted.",
]
`;

exports[`put multiple objects and list all from bucket 2`] = `
Object {
  "app.wsim/simulator.json": Object {
    "resources": Array [
      Object {
        "attrs": Object {},
        "path": "root/WingLogger",
        "props": Object {},
        "type": "wingsdk.cloud.Logger",
      },
      Object {
        "attrs": Object {},
        "path": "root/my_bucket",
        "props": Object {
          "public": false,
        },
        "type": "wingsdk.cloud.Bucket",
      },
    ],
    "sdkVersion": "0.0.0",
  },
  "tree.json": Object {
    "tree": Object {
      "children": Object {
        "WingLogger": Object {
          "attributes": Object {
            "wing:resource:connections": Array [],
            "wing:resource:stateful": true,
          },
          "constructInfo": Object {
            "fqn": "constructs.Construct",
            "version": "10.0.130",
          },
          "display": Object {
            "description": "A cloud logging facility",
            "hidden": true,
            "title": "Logger",
          },
          "id": "WingLogger",
          "path": "root/WingLogger",
        },
        "my_bucket": Object {
          "attributes": Object {
            "wing:resource:connections": Array [],
            "wing:resource:stateful": true,
          },
          "constructInfo": Object {
            "fqn": "constructs.Construct",
            "version": "10.0.130",
          },
          "display": Object {
            "description": "Represents a cloud object store",
            "title": "Bucket",
          },
          "id": "my_bucket",
          "path": "root/my_bucket",
        },
      },
      "constructInfo": Object {
        "fqn": "constructs.Construct",
        "version": "10.0.130",
      },
      "id": "root",
      "path": "root",
    },
    "version": "tree-0.1",
  },
}
`;

exports[`remove object from a bucket 1`] = `
Array [
  "wingsdk.cloud.Logger created.",
  "wingsdk.cloud.Bucket created.",
  "Put (key=unknown.txt).",
  "Delete (key=unknown.txt).",
  "wingsdk.cloud.Bucket deleted.",
  "wingsdk.cloud.Logger deleted.",
]
`;

exports[`remove object from a bucket 2`] = `
Object {
  "app.wsim/simulator.json": Object {
    "resources": Array [
      Object {
        "attrs": Object {},
        "path": "root/WingLogger",
        "props": Object {},
        "type": "wingsdk.cloud.Logger",
      },
      Object {
        "attrs": Object {},
        "path": "root/my_bucket",
        "props": Object {
          "public": false,
        },
        "type": "wingsdk.cloud.Bucket",
      },
    ],
    "sdkVersion": "0.0.0",
  },
  "tree.json": Object {
    "tree": Object {
      "children": Object {
        "WingLogger": Object {
          "attributes": Object {
            "wing:resource:connections": Array [],
            "wing:resource:stateful": true,
          },
          "constructInfo": Object {
            "fqn": "constructs.Construct",
            "version": "10.0.130",
          },
          "display": Object {
            "description": "A cloud logging facility",
            "hidden": true,
            "title": "Logger",
          },
          "id": "WingLogger",
          "path": "root/WingLogger",
        },
        "my_bucket": Object {
          "attributes": Object {
            "wing:resource:connections": Array [],
            "wing:resource:stateful": true,
          },
          "constructInfo": Object {
            "fqn": "constructs.Construct",
            "version": "10.0.130",
          },
          "display": Object {
            "description": "Represents a cloud object store",
            "title": "Bucket",
          },
          "id": "my_bucket",
          "path": "root/my_bucket",
        },
      },
      "constructInfo": Object {
        "fqn": "constructs.Construct",
        "version": "10.0.130",
      },
      "id": "root",
      "path": "root",
    },
    "version": "tree-0.1",
  },
}
`;

exports[`remove object from a bucket with mustExist as option 1`] = `
Array [
  "wingsdk.cloud.Logger created.",
  "wingsdk.cloud.Bucket created.",
  "Put (key=unknown.txt).",
  "Delete (key=unknown.txt).",
  "wingsdk.cloud.Bucket deleted.",
  "wingsdk.cloud.Logger deleted.",
]
`;

exports[`remove object from a bucket with mustExist as option 2`] = `
Object {
  "app.wsim/simulator.json": Object {
    "resources": Array [
      Object {
        "attrs": Object {},
        "path": "root/WingLogger",
        "props": Object {},
        "type": "wingsdk.cloud.Logger",
      },
      Object {
        "attrs": Object {},
        "path": "root/my_bucket",
        "props": Object {
          "public": false,
        },
        "type": "wingsdk.cloud.Bucket",
      },
    ],
    "sdkVersion": "0.0.0",
  },
  "tree.json": Object {
    "tree": Object {
      "children": Object {
        "WingLogger": Object {
          "attributes": Object {
            "wing:resource:connections": Array [],
            "wing:resource:stateful": true,
          },
          "constructInfo": Object {
            "fqn": "constructs.Construct",
            "version": "10.0.130",
          },
          "display": Object {
            "description": "A cloud logging facility",
            "hidden": true,
            "title": "Logger",
          },
          "id": "WingLogger",
          "path": "root/WingLogger",
        },
        "my_bucket": Object {
          "attributes": Object {
            "wing:resource:connections": Array [],
            "wing:resource:stateful": true,
          },
          "constructInfo": Object {
            "fqn": "constructs.Construct",
            "version": "10.0.130",
          },
          "display": Object {
            "description": "Represents a cloud object store",
            "title": "Bucket",
          },
          "id": "my_bucket",
          "path": "root/my_bucket",
        },
      },
      "constructInfo": Object {
        "fqn": "constructs.Construct",
        "version": "10.0.130",
      },
      "id": "root",
      "path": "root",
    },
    "version": "tree-0.1",
  },
}
`;
